traces/bug_58.txt
/home/runner/work/42sh-infer/42sh-infer/src/history.c:64: error: RESOURCE_LEAK
  resource acquired by call to `open()` at line 60, column 14 is not released after line 64, column 5.
Showing all 8 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/history.c:53:1: start of procedure save_history()
51.   }
52.   
53. > void save_history(Shell *shell)
54.   {
55.       char *home = getenv("HOME");

/home/runner/work/42sh-infer/42sh-infer/src/history.c:55:5: 
53.   void save_history(Shell *shell)
54.   {
55. >     char *home = getenv("HOME");
56.   
57.       if (shell->hist.arr == NULL)

/home/runner/work/42sh-infer/42sh-infer/src/history.c:57:9: Taking false branch
55.       char *home = getenv("HOME");
56.   
57.       if (shell->hist.arr == NULL)
              ^
58.           return;
59.       char *path = path_join(home, HIST_FILE);

/home/runner/work/42sh-infer/42sh-infer/src/history.c:59:5: 
57.       if (shell->hist.arr == NULL)
58.           return;
59. >     char *path = path_join(home, HIST_FILE);
60.       int fd = open(path, O_WRONLY | O_CREAT | O_TRUNC, 0644);
61.       free(path);

/home/runner/work/42sh-infer/42sh-infer/src/history.c:60:5: 
58.           return;
59.       char *path = path_join(home, HIST_FILE);
60. >     int fd = open(path, O_WRONLY | O_CREAT | O_TRUNC, 0644);
61.       free(path);
62.       if (fd == -1)

/home/runner/work/42sh-infer/42sh-infer/src/history.c:61:5: 
59.       char *path = path_join(home, HIST_FILE);
60.       int fd = open(path, O_WRONLY | O_CREAT | O_TRUNC, 0644);
61. >     free(path);
62.       if (fd == -1)
63.           return;

/home/runner/work/42sh-infer/42sh-infer/src/history.c:62:9: Taking false branch
60.       int fd = open(path, O_WRONLY | O_CREAT | O_TRUNC, 0644);
61.       free(path);
62.       if (fd == -1)
              ^
63.           return;
64.       write_hist(shell, fd);

/home/runner/work/42sh-infer/42sh-infer/src/history.c:64:5: Skipping write_hist(): empty list of specs
62.       if (fd == -1)
63.           return;
64.       write_hist(shell, fd);
          ^
65.   }
66.   
